--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="TEXT">#FFFFFF</color>
+    <color name="TEXT">#000000</color>
 </resources>
