--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         <EditText
             android:layout_width="@dimen/image"
             android:layout_height="wrap_content"
-            android:id="@+id/editText"
+            android:id="@+id/edtUser"
             android:layout_gravity="center_horizontal"
             android:hint="User :"
             android:textColor="@color/TEXT" />
@@ -27,7 +27,7 @@
         <EditText
             android:layout_width="@dimen/image"
             android:layout_height="wrap_content"
-            android:id="@+id/editText2"
+            android:id="@+id/edtPassword"
             android:layout_gravity="center_horizontal"
             android:hint="Password :"
             android:inputType="textPassword"
@@ -39,7 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="LOGIN"
-        android:id="@+id/button"
+        android:id="@+id/btnLogin"
         android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
